<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:title="@string/user_about">
                <menu >
                        <item
                            android:id="@+id/nav_user"
                            android:icon="@drawable/ic_account_circle_black_24dp"
                            android:title="@string/title_activity_profile" />
                        <item
                            android:id="@+id/nav_news"
                            android:icon="@drawable/ic_message_black_24dp"
                            android:title="@string/title_activity_message" />
                        <item
                            android:id="@+id/nav_help"
                            android:icon="@drawable/ic_live_help_black_24dp"
                            android:title="@string/title_activity_instructions" />
                        <item
                            android:id="@+id/nav_about"
                            android:icon="@drawable/ic_info_black_24dp"
                            android:title="@string/title_activity_about" />
                        <item
                            android:id="@+id/nav_logout"
                            android:icon="@drawable/ic_exit_to_app_black_24dp"
                            android:title="@string/logout" />
                </menu>

        </item>

</menu>
