<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sensor_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sensor_detail_bg"
    tools:context="org.jifeihu.smartshed.view.activity.SensorDetailActivity">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout_sensor_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/shape_divider"
        android:showDividers="middle"
        android:background="@color/transparent"
        android:orientation="vertical">
        <TextView
            android:padding="@dimen/appbar_padding_top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/air_humidity"
            android:textColor="@color/md_white_1000"
            android:id="@+id/tv_sensor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <lecho.lib.hellocharts.view.LineChartView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/line_chart_view_sensor_detail"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TableLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:divider="@drawable/shape_divider"
            android:showDividers="middle"
            android:layout_height="0dp">

            <TableRow
                android:divider="@drawable/shape_divider"
                android:showDividers="middle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:paddingLeft="15dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_real_data"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_sensor_real_time_data"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="22"
                                android:textSize="35sp"
                                android:textColor="@color/md_white_1000" />
                            <TextView
                                android:text="@string/real_time"
                                android:textColor="@color/md_white_1000"
                                android:paddingLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView
                            android:text="@string/real_time_value"
                            android:textColor="@color/md_grey_400"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_average"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_sensor_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="22.5"
                                android:textSize="35sp"
                                android:textColor="@color/md_white_1000" />
                            <TextView
                                android:text="@string/avg"
                                android:textColor="@color/md_white_1000"
                                android:paddingLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView
                            android:text="@string/average"
                            android:textColor="@color/md_grey_400"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:divider="@drawable/shape_divider"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:showDividers="middle">
                <LinearLayout
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_max"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_sensor_data_max"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="22"
                                android:textSize="35sp"
                                android:textColor="@color/md_white_1000" />
                            <TextView
                                android:text="@string/max_flag"
                                android:textColor="@color/md_white_1000"
                                android:paddingLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView
                            android:text="@string/max"
                            android:textColor="@color/md_grey_400"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_min"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_sensor_data_min"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="22"
                                android:textSize="35sp"
                                android:textColor="@color/md_white_1000" />
                            <TextView
                                android:text="@string/min_flag"
                                android:textColor="@color/md_white_1000"
                                android:paddingLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView
                            android:text="@string/min"
                            android:textColor="@color/md_grey_400"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:layout_height="0dp"
                android:divider="@drawable/shape_divider"
                android:showDividers="middle">
                <LinearLayout
                    android:paddingLeft="15dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_speed"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_sensor_data_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="22"
                                android:textSize="35dp"
                                android:textColor="@color/md_white_1000" />
                            <TextView
                                android:text="@string/speed"
                                android:textColor="@color/md_white_1000"
                                android:paddingLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView
                            android:text="@string/transform_speed"
                            android:textColor="@color/md_grey_400"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_real_data"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_sensor_data_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="22"
                                android:textSize="35dp"
                                android:textColor="@color/md_white_1000" />
                            <TextView
                                android:text="@string/unit_data_num"
                                android:textColor="@color/md_white_1000"
                                android:paddingLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView
                            android:text="@string/data_num"
                            android:textColor="@color/md_grey_400"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
